--- a/JavaScript/7.对象、类与面向对象.md
+++ b/JavaScript/7.对象、类与面向对象.md
@@ -690,3 +690,449 @@ SubType.prototype.sayAge = function(){
 ```
 
 寄生式组合继承时引用类型继承的最佳实践
+
+## 类
+
+### 类定义
+
+定义类主要有两种方式：类声明和类表达式
+
+```js
+// 类声明
+class Person{}
+
+// 类表达式
+const animal = class{};
+```
+
+**函数和类的区别**
+
+1. 函数定义能提升，但类定义不能提升
+
+```js
+console.log(FunctionExpression) // undefined
+var FunctionExpression = function(){}
+console.log(FunctionExpression) // function(){}
+
+console.log(FunctionDeclaration) // function(){}
+function FunctionDeclaration(){}
+console.log(FunctionDeclaration) // function(){}
+
+console.log(ClassExpression) // undefined
+var ClassExpression = class {};
+console.log(ClassExpression) // class {}
+
+console.log(ClassDeclaration) // ReferenceError
+class ClassDeclaration{}
+console.log(classDeclaration) // class ClassDeclaration{}
+```
+
+2. 函数受函数作用域限制，类受块级作用域限制
+
+```js
+{
+	function FunctionDeclaration(){}
+	class ClassDeclaration{}
+}
+console.log(FunctionDeclaration) // FunctionDeclaration(){}
+console.log(ClassDeclaration) // ReferenceError
+```
+
+#### 类的构成
+
+类由构造函数方法，实例方法，获取函数，设置函数和静态类方法组成。类定义默认都在严格模式下执行
+
+```js
+class Bar{
+    constructor(){}
+
+    get myBar(){}
+
+    set myBar(a){}
+
+    static myBar(){}
+}
+```
+
+在把类表达式赋值给变量后，可以通过name属性取得类表达式的名称，但是不能在类表达式作用域外部访问这个标识符
+
+```js
+let Person = class PersonName{
+    indentify(){
+        console.log(Person.name,PersonName.name) 
+    }
+}
+
+let p = new Person()
+p.indentify() // PersonName PersonName
+
+console.log(Person.name) // Person
+console.log(PersonName) // ReferenceError
+```
+
+#### 类构造函数
+
+##### 实例化
+
+`constructor`关键字用于在类定义块内部创建类的构造函数。方法名`constructor`告诉解释器在使用new操作符创建类的实例时，调用这个函数。
+
+```js
+class Animal {}
+
+class Person{
+    constructor(name){
+        console.log('person ctor')
+        console.log(arguments.length)
+        this.name = name || null
+    }
+}
+
+class Vegetable{
+    constructor(){
+        this.color = 'orange'
+    }
+}
+
+let a = new Animal() 
+let p = new Person('zcw') 
+// person ctor
+// 1
+console.log(p.name) // zcw
+let v = new Vegetable()
+console.log(v.color) // orange
+```
+
+默认情况下，构造函数会在执行之后返回this对象。构造函数返回的对象会被用作实例化的对象，如果没有什么引用新创建的对象，那么这个对象会被销毁。如果返回的不是this对象，则`instanceof`操作符不会检测出和类有关联，因为这个对象的原型指针没有修改
+
+```js
+class Person{
+    constructor(override){
+        this.foo = 'foo'
+        if(override){
+            return {
+                bar: 'bar'
+            }
+        }
+    }
+}
+
+let p1 = new Person(),
+    p2 = new Person(true)
+
+console.log(p1) // Person { foo: 'foo' }
+console.log(p1 instanceof Person) // true
+
+console.log(p2) // { bar: 'bar'}
+console.log(p2 instanceof Person) // false
+```
+
+##### 把类当成特殊函数
+
+`EcmaScript`没有正式的类这个类型，类就是一种特殊的函数，通过`typeof`操作符能检测出类就是函数
+
+```js
+class Person{}
+console.log(Person) // class Person{}
+console.log(typeof Person) // function
+```
+
+类标识符由`prototype`属性，这个原型也有一个`constructor`属性指向类自身
+
+```js
+class Person{}
+console.log(Person.prototype) // {constructor: f()}
+console.log(Person === Person.prototype.constructor) // true
+```
+
+类本身在使用new调用时就会被当成构造函数，类中定义的`constructor`方法不会被当成构造函数，对它使用`instanceof`操作符时回返回false。如果在创建实例时直接将类构造函数当作普通构造函数来使用，那么`instanceof`操作符的返回值回反转
+
+```js
+class Person{}
+
+let p1 = new Person()
+
+console.log(p1.constructor === Person) // true
+console.log(p1 instanceof Person) // true
+console.log(p1 instanceof Person.constructor); // false
+
+let p2 = new Person.constructor()
+
+console.log(p2.constructor === Person) // false
+console.log(p2 instanceof Person) // false
+console.log(p2 instanceof Person.constructor) // true
+```
+
+类是`javascript`的一等公民，可以像对象或函数引用一样把类当作参数传递
+
+```js
+let classList = [
+    class {
+        constructor(id){
+            this.id_ = id;
+            console.log(`instance ${this.id_}`)
+        }
+    }
+]
+
+function createInstance(classDefinition,id){
+    return new classDefinition(id)
+}
+
+let foo = createInstance(classList[0],3141) //instance 3141
+```
+
+类也可以向函数表达式立即调用一样立即实例化
+
+```js
+let p = new class Foo{
+    constructor(x){
+        console.log(x)
+    }
+}('bar') // bar
+
+console.log(p) // Foo {}
+```
+
+#### 实例、原型和类成员
+
+##### 实例成员
+
+每次通过new调用类标识符时，都会执行类构造函数。在构造函数中，可以为新创建的实例（this）添加自有属性。每个实例上的成员都不会在原型上共享
+
+```js
+class Person {
+    constructor(){
+        this.name = new String('Jack')
+        this.sayName = () => console.log(this.name)
+        this.nickName = ['Jake','J-Dog']
+    }
+}
+
+let p1 = new Person(),
+    p2 = new Person();
+
+p1.sayName() // [String: 'Jack']
+p2.sayName() // [String: 'Jack']
+
+console.log(p1.name === p2.name) // false
+console.log(p1.sayName === p2.sayName); // false
+console.log(p1.nickName === p2.nickName); // false
+
+p1.name = p1.nickName[0]
+p2.name = p2.nickName[1]
+
+p1.sayName() // Jake
+p2.sayName() // J-Dog
+```
+
+##### 原型方法与访问器
+
+在类块中定义的方法作为原型方法，可以在实例间共享
+
+```js
+class Person{
+    constructor(){
+        // 添加到this的所有内容都会存在于不同的实例上
+        this.locate = () => console.log('instance',this)
+    }
+
+    // 在类块中定义的所有内容都会定义在类的原型上
+    locate(){
+        console.log('prototype',this)
+    }
+}
+
+let p = new Person()
+p.locate() // instance this指向实例
+Person.prototype.locate() // prototype this指向原型对象
+```
+
+类方法等同于对象属性，可用字符串、符号或计算属性作为键
+
+```js
+const symbolKey = Symbol('symbolKey')
+
+class Person{
+    stringKey(){
+        console.log('invoked stringKey')
+    }
+    [symbolKey](){
+        console.log('invoked symbolKey')
+    }
+    ['computed'+'Key'](){
+        console.log('invoked computedKey')
+    }
+}
+
+let p = new Person()
+p.stringKey() // invoked stringKey
+p[symbolKey]() // invoked symbolKey
+p.computedKey() // invoked computedKey
+```
+
+类定义也支持get和set访问器，语法和普通对象一样
+
+```js
+class Person{
+    constructor(){
+        this.name_ = 'zcw'
+    }
+
+    set name(name){
+        this.name_ = name
+    }
+
+    get name(){
+        return this.name_
+    }
+}
+
+let p = new Person()
+console.log(p.name) // zcw
+p.name = 'zzz'
+console.log(p.name) // zzz
+```
+
+##### 静态类方法
+
+通过`static`关键字在类上定义静态成员，静态方法中，this指向类自身
+
+```js
+class Person{
+    constructor(){
+        this.locate = ()=>console.log('instance',this)
+    }
+
+    locate(){
+        console.log('prototype',this)
+    }
+
+    static locate(){
+        console.log('class',this)
+    }
+}
+
+let p = new Person()
+
+p.locate() // instance, Person {}
+Person.prototype.locate() // prototype, {constructor: ... }
+Person.locate() // class, class Person {}
+```
+
+静态类方法适合作为实例工厂
+
+```js
+class Person{
+    constructor(age){
+        this.age_ = age
+    }
+
+    get age(){
+        console.log(this.age_)
+    }
+
+    static create(){
+        return new Person(Math.floor(Math.random()*100))
+    }
+}
+console.log(Person.create()) // Person { age_: 29 }
+```
+
+##### 非函数原型和类成员
+
+类定义并不现实支持在**原型或类**上添加数据成员，但在类定义外部，可以手动添加
+
+```js
+class Person{
+    age = 27 // 在类上可以定义实例的成员数据
+    sayName(){
+        console.log(`${Person.greeting} ${this.name}`)
+    }
+}
+
+// 在类上定义数据成员
+Person.greeting = 'My Name is'
+
+// 在原型上定义数据成员
+Person.prototype.name = 'Jake'
+
+let p = new Person()
+p.sayName() // My Name is Jake
+console.log(p.age)
+```
+
+##### 迭代器与生成器方法
+
+类定义语法支持在原型和类本身上定义生成器方法
+
+```js
+class Person{
+    *createNicknameIterator(){
+        yield 'Jack';
+        yield 'Jake';
+        yield 'J-Dog';
+    }
+
+    static *createJobIterator(){
+        yield 'Butcher';
+        yield 'Baker'
+    }
+}
+
+let jobIter = Person.createJobIterator()
+console.log(jobIter.next().value) // Butcher
+console.log(jobIter.next().value) // Baker
+console.log(jobIter.next().value) // undefined
+
+let p = new Person()
+let nicknameIter = p.createNicknameIterator()
+console.log(nicknameIter.next().value) // Jack
+console.log(nicknameIter.next().value) // Jake
+console.log(nicknameIter.next().value) // J-Dog
+console.log(nicknameIter.next().value) // undefined
+```
+
+因为支持生成器方法，所以可以通过添加一个默认的迭代器，把类变成可迭代对象
+
+```js
+class Person{
+    constructor(){
+        this.nicknames = ['Jack','Jake','J-Dog']
+    }
+
+    *[Symbol.iterator](){
+        yield *this.nicknames.entries()
+    }
+}
+
+let p = new Person()
+for(let [idx,nickname] of p){
+    console.log(nickname)
+}
+// Jack
+// Jake
+// J-Dog
+```
+
+也可以只返回迭代器实例
+
+```js
+class Person {
+  constructor() {
+    this.nicknames = ['Jack', 'Jake', 'J-Dog'];
+  }
+
+  [Symbol.iterator]() {
+    return this.nicknames.entries();
+  }
+}
+
+let p = new Person();
+for (let [idx, nickname] of p) {
+  console.log(nickname);
+}
+// Jack
+// Jake
+// J-Dog
+```
+
