参数扩展与收集

--- a/JavaScript/9.函数.md
+++ b/JavaScript/9.函数.md
@@ -184,3 +184,65 @@ function makeKing(name="zcw",numerals=defaultNumeral){
 
 ## 参数扩展与收集
 
+### 扩展参数
+
+对可迭代对象使用扩展运算符，可将对象拆分，并返回迭代的每个值
+
+```js
+let value = [1,2,3,4]
+
+function getSum(){
+  let sum = 0
+  for(let i = 0;i<arguments.length;i++){
+    sum += arguments[i]
+  }
+  return sum
+}
+console.log(getSum.apply(null,value)) // es6以前可用apply来传参
+console.log(getSum(...value))
+```
+
+`arguments`只是消费扩展操作符的一种方式，在普通函数和箭头函数中，可以使用命名参数的方式来接受扩展操作符扩展后的参数
+
+```js
+let getProduct = (a,b,c=1)=>a*b*c
+
+console.log(getProduct(...[1,2,3]))
+```
+
+### 收集参数
+
+可以使用扩展操作符把不同长度的独立参数组合为一个数组
+
+使用收集参数不会影响`arguments`对象
+
+```js
+let getSum = (a,...values)=>console.log(values)
+getSum(1,2,3) // [2,3]
+
+let getSum = function(...values){
+    console.log(arguments.length)
+}
+getSum(1,2,3) // 3
+```
+
+## 函数声明和函数表达式
+
+函数声明会在任何代码执行之前先被读取并添加到执行上下文（函数声明提升）。
+
+```js
+// 没问题
+console.log(sum(10, 10));
+function sum(num1, num2) {
+  return num1 + num2;
+}
+
+// 会出错
+console.log(sum(10, 10));
+let sum = function(num1, num2) {
+  return num1 + num2;
+};
+```
+
+
+
