modify js function

--- a/JavaScript/9.函数.md
+++ b/JavaScript/9.函数.md
@@ -244,5 +244,162 @@ let sum = function(num1, num2) {
 };
 ```
 
+## 函数内部
 
+### arguments
 
+`arguments`对象包含调用函数时传入的所有参数。只有`function`关键字定义的函数才又`arguments`对象，它的`callee`属性是一个指向`arguments`对象所在函数的指针
+
+```js
+function factorial(num){
+  if(num<=1){
+    return 1
+  }else{
+  	// return num*factorial(num-1)
+    return num*arguments.callee(num-1) // 使用arguments.callee使调用函数解耦
+  }
+}
+
+let trueFactorial = factorial
+
+factorial = function(){
+  return 0
+}
+console.log(trueFactorial(5)) // 120，修改了factorial指针时不能映射到arguments.callee，如果调用时没有将函数与名称解耦，则结果为0
+console.log(factorial(5)) // 0
+```
+
+### this
+
+函数自执行，this指向window，`x.函数()`，函数指向x，箭头函数中，this引用的是定义箭头函数的上下文
+
+```js
+window.color = 'red';
+let o = {
+  color: 'blue'
+};
+
+let sayColor = () => console.log(this.color); // 箭头函数是在全局中定义的，所以this指向window
+
+sayColor();    // 'red'
+
+o.sayColor = sayColor;
+o.sayColor();  // 'red'
+```
+
+### caller
+
+这个属性引用的是调用当前函数的函数，或者如果是在全局作用域中调用的则为`null`。
+
+```js
+function outer() {
+  inner();
+}
+
+function inner() {
+  console.log(arguments.callee.caller);
+}
+
+outer(); // f outer(){}
+```
+
+### `new.target`
+
+`new.target`属性检测函数是否使用`new`关键字调用，如果正常调用，则`new.target`值为`undefined`，如果是new关键字调用，则`new.target`将被引用被调用的构造函数
+
+```js
+function King(){
+  if(!new.target){
+    throw 'King must be instantiated using "new"'
+  }
+  console.log(new.target)
+}
+
+new King() // f King(){}
+King() // Error: King must be instantiated using "new"
+```
+
+## 函数属性和方法
+
+`length`属性保存函数形参的个数
+
+`prototype`属性保存函数的所有实例方法，这个属性是不可枚举的
+
+`apply(this值，参数数组或arguments对象)`以指定的this值来调用函数
+
+`call(this值，参数1，参数2...)`以指定的this值来调用函数
+
+`bind(this值)`创建一个绑定特定this的函数实例
+
+```js
+window.color = 'red';
+var o = {
+  color: 'blue'
+};
+
+function sayColor() {
+  console.log(this.color);
+}
+let objectSayColor = sayColor.bind(o);
+objectSayColor();  // blue
+```
+
+`toString()`和`toLocaleString()`返回函数的字符串形式的源码
+
+`valueOf()`返回函数本身
+
+## 递归
+
+递归函数的形式是一个函数通过名称调用自己，但是通过名称调用自己有耦合，可通过`arguments.callee`解决，但是`arguments.callee`在严格模式下会报错，可以通过命名函数表达式解决
+
+```js
+const factorial = (function f(num){
+	if(num<=1){
+		return 1
+	}else{
+	return num * f(num-1)
+	}
+})
+```
+
+## 尾调用优化
+
+尾调用是外部函数的返回值是一个内部函数的返回值
+
+```js
+function outerFunction(){
+	return innerFunction() // 尾调用
+}
+```
+
+`ES6`尾调用优化之前：**有几层嵌套就有几层栈帧**
+
+1. 指定到`outerFunction`函数体，第一个栈帧被推到栈上
+2. 执行`outerFunction`函数体，到return语句。计算返回值必须先计算`innerFunction`
+3. 执行到`innerFunction`函数体，第二个栈帧被推到栈上
+4. 执行`innerFunction`函数体，计算其返回值
+5. 将返回值传回`outerFunction`，然后`outerFunction`再返回值
+6. 将栈弹出栈外
+
+`ES6`尾调用优化后：**只会有一个栈帧**
+
+1. 指定到`outerFunction`函数体，第一个栈帧被推到栈上
+2. 执行`outerFunction`函数体，到return语句。计算返回值必须先计算`innerFunction`
+3. 引擎发现把第一个栈帧弹出栈外也没问题，因为`innerFunction`的返回值也是`outerFunction`的返回值
+4. 弹出`outerFunction`栈帧
+5. 执行到`innerFunction`函数体，栈帧被推到栈上
+6. 执行`innerFunction`函数体，计算其返回值
+7. 将`innerFunction`的栈帧弹出栈外
+
+### 尾调用优化的条件
+
+尾调用优化需要确定外部栈帧真的没必要存在了。涉及条件如下：
+
+- 代码在严格模式下执行
+- 外部函数的返回值是对尾调用函数的调用
+- 尾调用函数返回后不需要执行额外的逻辑
+- 尾调用函数不是引用外部函数作用域中自由变量的闭包
+
+## 闭包
+
+闭包指那些引用了另一个函数作用域中变量的函数，通常在嵌套函数中实现
