--- a/JavaScript/9.函数.md
+++ b/JavaScript/9.函数.md
@@ -403,3 +403,49 @@ function outerFunction(){
 ## 闭包
 
 闭包指那些引用了另一个函数作用域中变量的函数，通常在嵌套函数中实现
+
+函数执行时，每个执行上下文中都会有一个包含其中变量的对象。全局上下文中的叫变量对象，在代码执行期间始终存在。局部上下文中的活动对象，只在函数执行期间存在。
+
+```js
+functtion compare(value1,value2){
+	if(value1 < value2){
+		return -1
+	}else if(value1 > value2){
+		return 1
+	}else{
+		return 0
+	}
+}
+
+let result = compare(5,10)
+```
+
+![](/Users/avalon/Documents/Note/imgs/作用域链.png)
+
+在定义compare函数时，就会为它创建作用域链，预装载全局变量对象，并保存在内部的`[[Scope]]`中。调用函数时会创建相应的执行上下文，然后通过复制函数的`[[Scope]]`来创建其作用域链。接着会创建函数的活动对象并将其推入作用域链的前端
+
+```js
+function createComparisonFunction(propertyName) {
+  return function(object1, object2) {
+    let value1 = object1[propertyName];
+    let value2 = object2[propertyName];
+
+    if (value1 < value2) {
+      return -1;
+    } else if (value1 > value2) {
+      return 1;
+    } else {
+      return 0;
+    }
+  };
+}
+
+let compare = createComparisonFunction('name');
+let result = compare({ name: 'Nicholas' }, { name: 'Matt' });
+compare = null
+```
+
+![](/Users/avalon/Documents/Note/imgs/闭包.jpg)
+
+`createComparisonFunction`的作用域链包含`createComparisonFunction`的活动对象和全局对象。匿名函数的作用域链包含前面两个和自己的活动对象，`createComparisonFunction`执行完毕后执行上下文的作用域链销毁，但它的活动对象并不销毁，因为匿名函数的作用域链对其有引用，直到匿名函数被销毁才会被销毁。可对`compare`赋值为null来解除引用
+
