新增window.open和定时器

--- a/JavaScript/10.BOM.md
+++ b/JavaScript/10.BOM.md
@@ -91,3 +91,54 @@ window.scrollTo({
 })
 ```
 
+### 导航与打开新窗口
+
+`window.open(要加载的url，目标窗口，特性字符串，新窗口是否取代浏览器历史记录的布尔值)`
+
+第二个参数如果有窗口名与参数一致，则打开该窗口，否则就打开一个新窗口并以参数命名该窗口。特殊值为`_self,_parent,_top,_blank`
+
+第三个参数指定新窗口的配置，如果没有传，则新窗口会带有所有默认的特性，如果打开的不是新窗口，则忽略第三个参数
+
+可以通过`close()`方法来关闭窗口，关闭掉窗口后只能通过closed属性来检查该窗口是否关闭了
+
+新建的窗口有一个opener属性，指向打开该窗口的引用，只在弹出窗口最上层window对象上有定义
+
+通过一个标签页打开另一个窗口，新打开的窗口不会运行在独立进程中，需要将新窗口的opener属性设为null才可以运行在独立进程中
+
+```js
+window.open('http://www.wrox.com','topFrame',"location=no,resizeable=yes,top=100,left=1000,width=500,height=500") // location是否显示工具栏，resizeable表示新创建的窗口是否可以通过resizeTo等函数改变窗口大小
+win.resizeBy(200,200)
+console.log(win.opener) //指向打开win窗口的窗口引用
+win.opener = null // 设置新窗口运行在独立进程中
+win.close()
+console.log(win.closed) // true
+```
+
+#### 弹窗屏蔽程序
+
+如果弹窗被屏蔽，则window.open()返回值为null
+
+```js
+let blocked = false;
+try {
+  let win = window.open("http://www.baidu.com", "_self");
+  if (win === null) {
+    blocked = true
+  }
+}catch(e){
+  blocked = true
+}
+if(blocked){
+  alert('the popup was blocked')
+}
+```
+
+### 定时器
+
+`setTimeout(要执行的代码字符串或函数，等待的毫秒数)`在指定毫秒数之后会将任务添加到任务队列，如果任务队列是空的，则立即执行任务，如果不是空的，则需要等到前面的任务执行完毕之后再去执行任务
+
+`setTimeout()`返回一个数值ID，是这个定时器的唯一标识符，可用该标识符传入`clearTimeout()`去取消任务，如果任务已经执行完毕，则取消任务不会生效
+
+**定时器的任务函数都会在全局作用域中的一个匿名函数中执行，所以任务函数中的this始终指向window，严格模式为undefined，箭头函数是定义函数时所在的作用域**
+
+`setInterval(要执行的代码字符串或函数，等待的毫秒数)`每隔一定时间执行一次任务代码。也会返回定时器ID，可用`clearInterval(ID)`来取消定时任务
