--- a/JavaScript/10.BOM.md
+++ b/JavaScript/10.BOM.md
@@ -142,3 +142,26 @@ if(blocked){
 **定时器的任务函数都会在全局作用域中的一个匿名函数中执行，所以任务函数中的this始终指向window，严格模式为undefined，箭头函数是定义函数时所在的作用域**
 
 `setInterval(要执行的代码字符串或函数，等待的毫秒数)`每隔一定时间执行一次任务代码。也会返回定时器ID，可用`clearInterval(ID)`来取消定时任务
+
+### 系统对话框
+
+1. alert：接受一个参数，这个参数会调用`toString()`
+2. confirm：接受一个参数，如果点了ok则返回true，如果点了cancel则返回false
+
+```js
+if(confirm('Are you sure?')){
+	alert('yes')
+}else{
+	alert('no')
+}
+```
+
+3. prompt：接受两个参数，显示给用户的文本和文本框默认值，点击ok则返回文本框的值，点击cancel则返回null
+
+```js
+let result = prompt("What is your name? ", "");
+if (result !== null) {
+  alert("Welcome, " + result);
+}
+```
+
