新增location navigator history

--- a/JavaScript/10.BOM.md
+++ b/JavaScript/10.BOM.md
@@ -142,3 +142,122 @@ if(blocked){
 **定时器的任务函数都会在全局作用域中的一个匿名函数中执行，所以任务函数中的this始终指向window，严格模式为undefined，箭头函数是定义函数时所在的作用域**
 
 `setInterval(要执行的代码字符串或函数，等待的毫秒数)`每隔一定时间执行一次任务代码。也会返回定时器ID，可用`clearInterval(ID)`来取消定时任务
+
+### location对象
+
+location对象即是window对象属性，又是document对象的属性
+
+```js
+http://foouser:barpassword@www.wrox.com:80/WileyCDA/?q=javascript#contents
+```
+
+| 属性              | 值                                                       | 描述                               |
+| ----------------- | -------------------------------------------------------- | ---------------------------------- |
+| location.hash     | "#contents"                                              | URL散列值，没有则为空字符串        |
+| location.host     | "www.wrox.com:80"                                        | 服务器名和端口号                   |
+| location.hostname | "www.wrox.com"                                           | 服务器名                           |
+| location.href     | "http://www.wrox.com:80/WileyCDA/?q=javascript#contents" | 当前月面的完整URL                  |
+| location.pathname | "/WileyCDA/"                                             | URL中的路径名或文件名              |
+| location.port     | "80"                                                     | 端口名，如果没有端口则返回空字符串 |
+| location.protocol | "http:"                                                  | 页面使用的协议                     |
+| location.search   | "?q=javascript"                                          | URL的查询字符串                    |
+| location.username | "foouser"                                                | 域名前指定的用户名                 |
+| location.password | "barpassword"                                            | 域名前指定的密码                   |
+| location.origin   | "http://www.wrox.com"                                    | URL的源地址                        |
+
+#### 解析查询字符串
+
+```js
+ function getQueryStringArgs(){
+    let qs = (location.search.length>0?location.search.substring(1):""),
+        args = {};
+    
+    for(let item of qs.split("&").map(kv=>kv.split("="))){
+        let name = decodeURIComponent(item[0]),
+            value = decodeURIComponent(item[1]);
+        if(name.length){
+            args[name] = value
+        }
+    }
+    return args;
+}
+```
+
+`URLSearchParams`可以通过`get(),set(),has()`等方法来查询和修改查询字符串
+
+```js
+let qs = "?q=javascript&num=10"
+let searchParams = new URLSearchParams(qs)
+console.log(searchParams.get('q')) // 'javascript'
+console.log(searchParams.has('q'));// true
+searchParams.set('q','js')
+console.log(searchParams.toString()) // 'q=js&num=10'
+```
+
+#### 操作地址
+
+`location.assign(url)`效果和修改`location.href`和修改`window.location`效果一致
+
+只要修改除hash以外的location属性，都会导致页面重新加载，但修改hash会在浏览器历史记录中增加一条记录
+
+`location.replace(url)`会导航到一个新的页面，但是原先的历史记录会被替换到
+
+`location.reload(布尔值)`如果不传布尔值，浏览器会从缓存中重新加载页面，如果传true，浏览器会强制从服务器重新加载页面
+
+### navigator对象
+
+| 属性/方法     | 描述                 |
+| ------------- | -------------------- |
+| appName       | 浏览器全名           |
+| appVersion    | 浏览器版本           |
+| cookieEnabled | 是否启用cookie       |
+| language      | 浏览器主语言         |
+| onLine        | 是否联网             |
+| platform      | 浏览器运行的系统平台 |
+| plugins       | 浏览器运行的插件数组 |
+| userAgent     | 浏览器用户代理字符串 |
+
+#### 检测插件
+
+`navigator.plugins`可以获取浏览器插件信息
+
+1. name：插件名称 
+2. description：插件介绍
+3. filename：插件文件名
+4. length：当前插件处理的MIME类型数量
+
+```js
+let hasPlugin = function(name){
+    name = name.toLowerCase()
+    for(let plugin of navigator.plugins){
+        if(plugin.name.toLowerCase().indexOf(name)>-1){
+            return true
+        }
+    }
+    return false
+}
+alert(hasPlugin('flash'))
+```
+
+### history对象
+
+表示当前窗口首次使用以来用户的导航历史记录
+
+#### 导航
+
+`go(整数)`正数前进，负数后退
+
+`forward()`前进一步
+
+`back()`后退一步
+
+`history.length`当前窗口历史记录的条数
+
+#### 历史状态管理
+
+`history.pushState(state对象,title,相对URL)`改变了浏览器URL又不重新加载，状态信息被推倒历史记录中
+
+`popState`事件可以监听到后退操作，event对象中保存着state对象的副本，如果是第一个页面则state对象为null
+
+`replaceState(state对象，title)`更新状态并不去创建新的历史记录
+
