修改客户端检测

--- a/JavaScript/11.客户端检测.md
+++ b/JavaScript/11.客户端检测.md
@@ -16,3 +16,36 @@ function getElement(id){
 }
 ```
 
+### 安全能力检测
+
+能力检测最有效的场景是**检测能力是否存在的同时，验证其是否能够展现出预期的行为**
+
+```js
+function isSortable(object){
+    // 不要这样做，这样只能检测对象有没有sort属性，但是不能检测sort是否符合预期行为
+	return !!object.sort;
+}
+let result = isSortable({sort: true}) // 这样也能返回true
+
+function isSortable(object){
+    // 这样能检测对象的sort属性是否是函数类型
+    return typeof object.sort == 'function'
+}
+```
+
+### 基于能力检测进行浏览器分析
+
+使用能力检测而非用户代理检测的有点在于，伪造用户代理字符串很简单，但伪造相应的能力很难
+
+#### 特性检测
+
+按照能力将浏览器归类，最好集中检测
+
+```js
+// 检测浏览器是否支持Netscape式插件
+let hasNSPlugins = !!(navigator.plugins&&navigator.plugins.length)
+
+// 检测浏览器是否具有DOM level1能力
+let hasDOM1 = !!(document.getElementById && document.createElement && document.getElementByTagName)
+```
+
