--- a/JavaScript/7.对象、类与面向对象.md
+++ b/JavaScript/7.对象、类与面向对象.md
@@ -30,7 +30,7 @@ console.log(person.name) // 'zzz'
 
 #### 访问器属性
 
-- `[[Configurable]]`是否可以用`delete`删除，是否可以修改属性特性，是否可以把它改为访问器属性，默认为true
+- `[[Configurable]]`是否可以用`delete`删除，是否可以修改属性特性，是否可以把它改为数据属性，默认为true
 - `[[Enumerable]]`是否可用`for-in`循环，定义在对象上的属性都为true
 - `[[Get]]`在读取属性时调用
 - `[[Set]]`在写入属性时调用
