--- a/JavaScript/7.对象、类与面向对象.md
+++ b/JavaScript/7.对象、类与面向对象.md
@@ -386,6 +386,8 @@ friend.sayName() // 报错，实例的[[prototype]]指向的对象上没有sayNa
 
 ![原型的动态性](/Users/avalon/Documents/Note/imgs/原型的动态性.png)
 
+![](C:\Users\Administrator\Desktop\Note\imgs\原型的动态性.png)
+
 ***重写原型之后创建的实例才会引用新的实例***
 
 #### 原生对象的原型
