--- a/JavaScript/12.DOM.md
+++ b/JavaScript/12.DOM.md
@@ -381,5 +381,149 @@ function loadStyleString(css){
     let head = document.getElementsByTagName('head')[0]
     head.appendChild(style)
 }
+loadStyleString("body{background-color:red}")
+```
+
+### 使用NodeList
+
+`NodeList、NamedNodeMap、HTMLCollection`是实时动态的，文档结构变化会实时的反映出来
+
+```js
+// 这段代码会导致无穷循环
+let divs = document.getElementsByTagName("div");
+
+for (let i = 0; i < divs.length; ++i){
+  let div = document.createElement("div");
+  document.body.appendChild(div);
+}
+```
+
+divs是实时的HTMLCollection，每向页面添加一个新的div，再次访问这个集合时就会更新集合
+
+为了避免无穷循环，可采用保存初始集合长度方法或者反向循环
+
+## `MutationObserver`接口
+
+可在DOM被修改时异步执行回调
+
+### 基本用法
+
+`MutationObserver`实例通过调用`MutationObserver`构造函数并传入回调函数创建
+
+```js
+let observer = new MutationObserver(()=>{console.log("DOM was mutated!")})
+```
+
+#### `observe()`方法
+
+新创建的`MutationObserver`实例不会关联DOM任何部分。可通过`observe()`把observer与DOM关联起来。
+
+`observe(要观察变化的DOM节点，MutationObserverInit对象)`:MutationObserverInit对象用户控制观察那些方面的变化
+
+```js
+let observer = new MutationObserver(()=>console.log('DOM was mutated'))
+observer.observe(document.body,{
+    attributes: true
+})
+document.body.className = 'foo' 
+console.log('changed body class')
+// changed body class
+// DOM was mutated 后执行回调，说明回调是异步执行的
+```
+
+#### 回调与`MutationRecord`
+
+每个回调都会接受一个`MutationRecord`实例的数组。`MutationRecord`实例包含了变化的内容即变化的DOM，回调执行前可能同时发生多个满足观察条件的事件，所以每次回调执行都会传一个包含按顺序入队的MutationRecord实例的数组
+
+回调函数第二个参数是观察变化的`MutationObserver`实例
+
+```js
+let observer = new MutationObserver((observerRecord,mutationObserver)=>console.log(observerRecord,mutationObserver))
+observer.observe(document.body,{
+attributes: true
+})
+document.body.setAttributeNS('baz', 'foo', 'bar');
+// [
+//   {
+//     addedNodes: NodeList [],
+//     attributeName: "foo",
+//     attributeNamespace: "baz",
+//     nextSibling: null,
+//     oldValue: null,
+//     previousSibling: null
+//     removedNodes: NodeList [],
+//     target: body
+//     type: "attributes"
+//   }
+// ]
+```
+
+| 属性               | 说明                                                         |
+| ------------------ | ------------------------------------------------------------ |
+| target             | 被修改影响的目标节点                                         |
+| type               | 字符串，表示变化的类型:'attributes'、'characterData'或'childList' |
+| oldValue           | 如果再MutationObserverInit对象中启用了attrbuteOldValue或characterData OldValue为true，`"attributes"`或`"characterData"`的变化事件会设置这个属性为被替代的值，"childList"类型的变化始终为null |
+| attributeName      | 对于"attributes"类型的变化，这里保存被修改属性的名字，其他变化事件这个属性值为null |
+| attributeNamespace | 对于使用了命名空间的"attributes"类型的变化，这里保存了被修改属性的名字，其他变化事件值为null |
+| addedNodes         | 对于"childList"类型的变化，返回包含变化中添加节点的NodeList，默认为空NodeList |
+| removedNodes       | 对于"childList"类型的变化，返回包含变化中删除节点的NodeList，默认为空NodeList |
+| previousSibling    | 对于`"childList"`类型的变化，返回变化节点的前一个同胞`Node`<br/>默认为`null` |
+| nextSibling        | 对于`"childList"`类型的变化，返回变化节点的后一个同胞`Node`<br/>默认为`null` |
+
+#### `disconnect()`方法
+
+只要被观察的DOM不被回收，MutationObserver的回调就会响应DOM变化事件。可通过`disconnect()`提前终止执行回调，连加入任务队列的回调任务也会被终止
+
+```js
+let observer = new MutationObserver((observerRecord,mutationObserver)=>console.log(observerRecord,mutationObserver))
+observer.observe(document.body,{
+attributes: true
+})
+document.body.className="zzz"
+observer.disconnect()
+// 没有日志输出
+```
+
+#### 复用MutationObserver
+
+多次调用`observe()`方法，可以复用一个`MutationObserver`对象观察多个不同的目标节点，可通过`MutationRecord`的target属性识别是哪个目标节点
+
+`disconnect()`会停止观察所有目标
+
+```js
+let observer = new MutationObserver((mutationRecords)=>{mutationRecords.map(item=>console.log(item.target))})
+let childA = document.createElement('div')
+childB = document.createElement('span')
+document.body.appendChild(childA)
+document.body.appendChild(childB)
+observer.observe(childA,{attributes: true})
+observer.observe(childB,{attributes: true})
+childA.setAttribute('foo','bar')
+childB.setAttribute('foo','bar')
+// div
+// span
+observer.disconnect() // A和B都停止观察
+```
+
+#### 重用MutationObserver
+
+调用`disconnect()`并不会结束`MutationObserver`的声明，还可以重新使用这个观察者，再次将它关联到新的目标节点
+
+```js
+let observer = new MutationObserver(()=>console.log('<body> attributes changed'))
+observer.observe(document.body,{attributes: true})
+document.body.setAttribute('foo','bar')
+
+setTimeout(()=>{
+observer.disconnect()
+document.body.setAttribute('bar','baz')
+},0)
+
+setTimeout(()=>{
+observer.observe(document.body,{attributes: true})
+document.body.setAttribute('baz','qux')
+})
+// <body> attributes changed
+// <body> attributes changed
 ```
 
