--- a/JavaScript/12.DOM.md
+++ b/JavaScript/12.DOM.md
@@ -527,3 +527,52 @@ document.body.setAttribute('baz','qux')
 // <body> attributes changed
 ```
 
+### MutationObserverInit与观察范围
+
+`MutationObserverInit`对象的属性
+
+| 属性                  | 说明                                                         |
+| --------------------- | ------------------------------------------------------------ |
+| subtree               | 布尔值，表示除了目标节点，是否观察目标节点的子树，如果是false，则只观察目标节点，true则观察目标节点即其子树，默认false |
+| attributes            | 布尔值，是否观察目标节点属性变化，默认为false                |
+| attributeFilter       | 字符串数组，表示要观察哪些属性变化，设为true也会将attributes值转为true，默认观察所有属性 |
+| attributeOldValue     | 布尔值，表示MutationRecord是否记录变化之前的属性值，设为true也会将attributes值转为true，默认false |
+| characterData         | 布尔值，表示修改字符数据是否触发变化事件，默认为false        |
+| characterDataOldValue | 布尔值，表示MutationRecord是否记录变化之前的字符数据，把这个值设为true也会将characterData的值转为true，默认为false |
+| childList             | 布尔值，表示修改目标节点的子节点是否触发变化事件，默认为false |
+
+**设置元素文本内容的标准方式是textContent属性，innerText属性不建议使用**
+
+### 异步回调与记录队列
+
+#### 记录队列
+
+每次`MutationRecord`被添加到`MutationObserver`的记录队列时，仅当队列中微任务长度为0时，才会将观察者注册的回调作为微任务调度到任务队列上。回调函数退出后，记录队列会被清空
+
+#### `takeRecords()`方法
+
+调用`MutationObserver`实例的`takeRecords()`方法可以清空记录队列，并返回其中的所有`MutationRecord`实例
+
+```js
+let observer = new MutationObserver((mutationRecords)=>console.log(mutationRecords))
+observer.observe(document.body,{attributes: true})
+document.body.className = 'foo'
+document.body.className = 'bar'
+document.body.className = 'baz'
+console.log(observer.takeRecords()) // [MutationRecord, MutationRecord, MutationRecord]
+console.log(observer.takeRecords()) // []
+```
+
+### 性能、内存与垃圾回收
+
+#### `MutationObserver`引用
+
+`MutationObserver`实例与目标节点之间的关系时是非对称的：
+
+- `MutationObserver`拥有对要观察目标节点的弱引用，所以不会妨碍回收目标节点
+- 目标节点对`MutationObserver`拥有强引用，目标节点被回收，`MutationObserver`实例也会被回收
+
+#### `MutationRecord`引用
+
+`MutationRecord`实例至少包含对已有DOM节点的一个引用。有时候需要保存某个观察者的完整变化记录，保存这些`MutationRecord`实例就会保存它们引用的节点，从而妨碍节点被回收。所以保存这些记录时建议从`MutationRecord`中抽取有用的信息，保存到一个新对象，最后抛弃`MutationRecord`
+
