--- a/JavaScript/13.DOM扩展.md
+++ b/JavaScript/13.DOM扩展.md
@@ -134,3 +134,80 @@ IE和Opera的返回值会把元素标签转为大写，Safari、chrome和Firefox
 
 #### `insertAdjacentHTML()`和`insertAdjacentText()`
 
+接收两个参数：要插入标记的位置和要插入的HTML或文本
+
+- `beforebegin`：插入当前元素前面，作为前一个同胞节点
+- `afterbegin`：插入当前元素内部，作为新的子节点或放在第一个子节点前面
+- `beforeend`：插入当前元素内部，作为新的子节点或放在最后一个子节点后面
+- `afterend`：插入当前元素的后面，作为下一个同胞节点
+
+```js
+element.insertAdjacentHTML('beforebegin','<p>hello world</p>')
+element.insertAdjacentText('beforebegin','hello world')
+```
+
+#### 内存和性能问题
+
+使用以上方法替换子节点会导致内存问题。如被移除的子树元素中之前有关联的事件处理程序或其他`js`对象（作为元素属性），那么他们之间的绑定关系会滞留在内存中，所以使用`innerHTML、outerHTML和insertAdjacentHTML()`之前，最好手动删除要被替换的元素上的事件和`js`对象
+
+在使用`innerHTML`和`outerHTML`插入时，应控制赋值次数，最好是先将值处理好再一次性赋值给`innerHTML`或`outerHTML`
+
+### `scrollIntoView()`
+
+可以滚动浏览器窗口或容器元素以便包含元素进入视口
+
+参数：
+
+- `alignToTop`是一个布尔值
+  - true：窗口滚动后元素的顶部和视口顶部对齐
+  - false：窗口滚动后元素的底部和视口对齐
+- `scrollIntoViewOptions`选项对象
+  - `behavior`：定义过渡动画，可取的值为smooth和auto
+  - `block`：定义垂直方向的对齐。取值为start、center、end和nearest
+  - `inline`：定义水平方向上的对齐。取值为start、center、end和nearest
+
+## 专有扩展
+
+### children属性
+
+children属性是一个`HTMLCollection`，只包含元素的Element类型的子节点
+
+### contains()方法
+
+`contians()`再要搜索的祖先元素上调用，参数是目标节点，如果目标节点是被搜索节点的后代，则返回true，否则返回false
+
+```js
+document.documentElement.contains(document.body) // true
+```
+
+`compareDocumentPosition()`也可以确定节点间的关系
+
+| 掩码   | 节点关系                                    |
+| ------ | ------------------------------------------- |
+| `0x1`  | 断开（传入的节点不在文档中）                |
+| `0x2`  | 领先（传入的节点在DOM树中位于参考节点之前） |
+| `0x3`  | 随后（传入的节点在DOM树中位于参考节点之后） |
+| `0x8`  | 包含（传入的节点是参考节点的祖先）          |
+| `0x10` | 被包含（传入的节点是参考节点的后代）        |
+
+```js
+let result = document.documentElement.compareDocumentPosition(document.body)
+console.log(!!result & 0x10)
+```
+
+### 插入标记
+
+#### `innerText`属性
+
+在读取`innerText`属性时，会按照深度优先的顺序将子树中所有文本的值拼接起来
+
+在写入值时，会移除元素所有的后代并插入一个包含该值的文本节点
+
+#### `outerText`属性
+
+`outerText`和`innerText`的区别在于前者作用范围包含调用它的节点
+
+读取文本值时，`outerText`和`innerText`返回同样的内容
+
+写入文本值时，`outerText`是替换整个元素
+
