--- a/JavaScript/14.DOM2和DOM3.md
+++ b/JavaScript/14.DOM2和DOM3.md
@@ -1,2 +1,22 @@
-# DOM2和DOM3
+# `DOM2`和`DOM3`
+
+## DOM的演进
+
+### `Document`的变化
+
+新增方法`importNode(要复制的节点，表示是否同时复制子树的布尔值)`，目的是从其他文档获取一个节点并导入插入到新文档，每个节点都有`ownerDocument`属性指向所属文档，`appendChild`传入节点的`ownerDocument`不是指向当前文档，则会发生错误，而`importNode()`导入其他文档的节点会返回一个新节点，这个新节点的`ownerDocument`是正确的
+
+`DOM2 View`给`Document`类型增加了新属性`defaultView`，指向拥有当前文档的窗口或框架的指针，`IE8`以前不支持此属性，可用等价的`parentWindow`
+
+```js
+let parentWindow = document.defaultView || document.parentWindow
+```
+
+### Node的变化
+
+`isSameNode()`和`isEqualNode()`都用于比较节点，都接收一个节点参数
+
+`isSameNode()`意味着引用同一个对象
+
+`isEqualNode()`意味着节点类型，属性和`childsNodes`也相等
 
