--- a/JavaScript/14.DOM2和DOM3.md
+++ b/JavaScript/14.DOM2和DOM3.md
@@ -20,3 +20,72 @@ let parentWindow = document.defaultView || document.parentWindow
 
 `isEqualNode()`意味着节点类型，属性和`childsNodes`也相等
 
+## 样式
+
+### 存取元素样式
+
+HTML元素在`JavaScript`中会有一个对应的`style`属性，这个属性是一个`CSSStyleDeclaration`实例，这个实例只包含通过HTML的style属性指定的样式值（`CSS`的连字符在`js`中要用驼峰,`float`对应的属性名是`cssFloat`）
+
+```js
+console.log(myDiv.style.backgroundColor) // blue
+```
+
+#### DOM样式属性和方法
+
+`DOM2 Style`规范也在style对象上定义了一些属性和方法：
+
+- `cssText`：包含style属性中的`css`代码，写模式下会重写整个style属性的值
+- `length`：应用给元素的`css`属性数量
+- `parentRule`：表示`css`信息的`CSSRule`对象
+- `getPropertyPriority(propertyName)`：如果`CSS`属性`propertyName`使用了`!important`则返回`"important"`，否则返回空字符串
+- `getPropertyValue(propertyName)`：返回属性`propertyName`的字符串值
+- `item(index)`：返回索引为index的`css`属性值
+- `removeProperty(propertyName)`：从样式表中删除`CSS`属性`propertyName`
+- `setProperty(perpertyName,value,priority)`：设置`css`属性`propertyName`的值为value，priority是"important"或空字符串
+
+```js
+myDiv.style.cssText = "width: 25px;height: 100px;background-color: green"
+
+for(let i = 0,len = myDiv.style.length; i < len; i++){
+    console.log(myDiv.style.item(i))
+    cosnole.log(myDiv.style.getPropertyValue(myDiv.style.item(i)))
+}
+
+myDiv.style.removeProperty('border')
+```
+
+#### 计算样式
+
+style对象上的样式只包含行内样式。`DOM2 Style`在`document.defaultView`上增加了`getComputedStyle(要取得计算样式的元素，伪元素字符串)`方法，返回一个`CSSStyleDeclaration`对象，如果不需要查询伪元素，则第二个参数传null
+
+**计算样式返回的对象是只读的**
+
+```js
+let computedStyle = document.defaultView.getComputedStyle(myDiv, null);
+```
+
+### 操作样式表
+
+`CSSStyleSheet`类型表示使用link和style元素定义的样式表，继承自`StyleSheet`
+
+从`StyleSheet`继承的属性：
+
+- `disabled`：表示样式表是否被禁用了（可读可写）
+- `href`：如果是使用了link包含的样式表，则返回样式的URL，否则返回null
+- `media`：样式表支持的媒体类型集合
+- `ownerNode`：指向拥有当前样式表的节点，在HTML中要么是link要么是style
+- `parentStyleSheet`：如果当前样式表是通过@import被包含在另一个样式表中，则这个属性指向导入它的样式表
+- `title`：ownerNode的title属性
+- `type`：字符串，表示样式表的类型，对`css`来说是`"text/css"`
+
+`CSSStyleSheet`的其他属性和方法
+
+- `CSSRules`：当前样式表包含的样式规则的集合
+- `ownerRule`：如果样式表是使用@import导入的，则指向导入规则，否则为null
+- `deleteRule(index)`：在指定位置删除`cssRules`的规则
+- `insertRule(rule,index)`：在指定位置像`cssRules`中插入规则
+
+`document.styleSheets`表示文档中可用的样式表的集合
+
+### 元素尺寸
+
