--- a/JavaScript/14.DOM2和DOM3.md
+++ b/JavaScript/14.DOM2和DOM3.md
@@ -89,3 +89,68 @@ let computedStyle = document.defaultView.getComputedStyle(myDiv, null);
 
 ### 元素尺寸
 
+#### 偏移尺寸
+
+- `offsetHeight`：元素在垂直方向上占用的像素尺寸，包括高度、水平滚动条高度和上下边框
+- `offsetWidth`：元素咋水平方向上占用的像素尺寸，包括宽度、垂直滚动条高度和左右边框
+- `offsetLeft`：元素左边框外侧距离包含元素左边框的像素数
+- `offsetTop`：元素上边框外侧距离包含元素上边框的像素数
+
+![](C:\Users\Administrator\Desktop\Note\imgs\偏移属性.png)
+
+要确定一个元素在页面中的偏移量，可以用`offsetLeft`和`offsetTop`分别与`offsetParent`的相同属性相加，一直加到根元素
+
+```js
+function getElementLeft(element) {
+  let actualLeft = element.offsetLeft;
+  let current = element.offsetParent;
+
+  while (current !== null) {
+    actualLeft += current.offsetLeft;
+    current = current.offsetParent;
+  }
+
+  return actualLeft;
+}
+
+function getElementTop(element) {
+  let actualTop = element.offsetTop;
+  let current = element.offsetParent;
+
+  while (current !== null) {
+    actualTop += current.offsetTop;
+    current = current.offsetParent;
+  }
+
+  return actualTop;
+}
+```
+
+#### 客户端尺寸
+
+元素的客户端尺寸包含元素内容及其内边距所占的空间
+
+`clientWidth`：内容区宽度加左右内边距
+
+`clientHeight`：内容区高度加上下内边距
+
+![](C:\Users\Administrator\Desktop\Note\imgs\客户端尺寸.png)
+
+#### 滚动尺寸
+
+`scrollHeight`：没有滚动条出现时，元素内容的总高度
+
+`scrollLeft`：内容区左侧隐藏的像素数，设置这个属性可以改变元素的位置
+
+`scrollTop`：内容区顶部隐藏的像素树，设置这个属性可以改变元素的位置
+
+`scrollWidth`：没有滚动条出现时，元素内容的总高度
+
+![](C:\Users\Administrator\Desktop\Note\imgs\滚动尺寸.png)
+
+#### 确定元素尺寸
+
+每个元素上都有`getBoundingClientRect()`，返回`DOMRect`对象，包含6个属性left、top、right、bottom、height和width，这些属性给出了元素在页面中相对于视口的位置
+
+![](C:\Users\Administrator\Desktop\Note\imgs\确定元素尺寸.png)
+
